<resources>
    <string name="app_name">Search on Role</string>

    <string name="action_settings">Configurações</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>

    <string name="meus_roles">Meus Rolês</string>
    <string name="organizacao">Organização</string>
    <string name="servicos">Serviços</string>
    <string name="minha_carteira">Minha Carteira</string>
    <string name="login">Login</string>
    <string name="cadastrar_role">Cadastrar Rolê</string>
    <string name="editar_role">Editar Rolê</string>
    <string name="excluir_role">Excluir Rolê</string>
    <string name="todos_roles">Rolês</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo orbigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_role">Role</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_editar_usuario">Atualizar Cadastro</string>

</resources>
