<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/sor_icon"
        android:layout_width="162dp"
        android:layout_height="188dp"
        android:src="@drawable/sor_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_meus_roles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meus_roles"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/sor_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_organizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organizacao"
        android:layout_below="@+id/button_meus_roles"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_servicos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servicos"
        android:layout_below="@+id/button_organizacao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_minha_carteira"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minha_carteira"
        android:layout_below="@+id/button_servicos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/button_minha_carteira"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
